# Sundance-SMT

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml
results/: cvc5_1130.txt  results_1124.txt  results_1126.txt  results_1127.txt  results_1129.txt  results_1129_2.txt  results_1129_3.txt  results_1130.txt  results_1201.txt  results_1201_2.txt  results_1201_3.txt  results_1202.txt  results_1202_2.txt  results_1203.txt  results_1203_2.txt  results_1206_indDTpanic.txt  results_1207_DTaccessor.txt  results_1207_DTaccessor_2.txt  results_1208_DTaccessorrecognizer_2.txt  results_1209_DTaccessorrecognizer.txt  results_1209_DTaccessorrecognizer_2.txt  results_1210_DTaccessorrecognizerpartialtester.txt  results_1211_DTcomplete.txt  results_1214_DTcompletefixed.txt  results_1215_DTtesterctoradded.txt  results_1215_DTtesterctoradded_fixed.txt  results_1217_skolemization.txt  results_1218_skolemization_30sectimeout.txt  results_1218_skolemization_60sectimeout.txt  results_1218_skolemization_60sectimeout_extra.txt  results_1219.txt  results_1219_nodefinefun.txt  results_1222_instantiateexistential.txt  results_1222_removeredundantskolemizations.txt  z3_1130.txt  z3_1130_noarith.txt  z3_1130_optimalflags.txt
scripts/: analyze_smt_results.py  analyze_unknown_times.py  calculate_medians.py  compare_smt_results.py  process_edrat_files.py  run_set_membership.py  smt_analysis_results.csv
src/: cadical_propagator.rs  cdcl.rs  cnf.rs  config.rs  lib.rs  main.rs  preprocess.rs  utils.rs
src/arithmetic/: lialp.rs  lp.rs  mod.rs  nelsonoppen.rs  z3lp.rs
src/datatypes/: mod.rs  process.rs
src/egraphs/: congruence_closure.rs  datastructures.rs  egraph.rs  meeting129.md  mod.rs  proofforest.rs  unionfind.rs  utils.rs
src/proof/: mod.rs  proof_tracer.rs
src/quantifiers/: mod.rs  quantifier.rs  skolem.rs
src/tests/: test_datatypes.rs
tests/: regression_test.rs  test_datatypes.rs
tests/lia_examples/: inst_1_1_sat_bools.smt2  inst_1_1_sat_div.smt2  inst_2_3_unsat.smt2  inst_3_3_sat.smt2
tests/regression/: README.md  expected_results.json
verus_benchmarks/atmosphere/: array.1.smt2  array.2.smt2  array.3.smt2  array.4.smt2  (+94 more)
(+4004 files in other folders)
